k8s/alpha/fintlabs-no.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
  name: fint-core-consumer-utdanning-vurdering
spec:
  ports:
    - name: "8080"
      port: 8080
  type: LoadBalancer
  selector:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
  name: fint-core-consumer-utdanning-vurdering
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-core-consumer-utdanning-vurdering
  template:
    metadata:
      labels:
        io.kompose.service: fint-core-consumer-utdanning-vurdering
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "provider/actuator/prometheus"
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        - image: fintlabsacr.azurecr.io/fint-core-consumer-utdanning-vurdering:dummy
          name: fint-core-consumer-utdanning-vurdering
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "1152Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
