k8s/alpha/viken-no.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
  name: fint-core-consumer-utdanning-vurdering
spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
  #namespace: fint-no
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alpha.felleskomponent.no`) && PathPrefix(`/utdanning/vurdering/elevfravar`) && Headers(`x-org-id`, `viken.no`)
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          #namespace: fint-no
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-core-consumer-utdanning-vurdering
  name: fint-core-consumer-utdanning-vurdering
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-core-consumer-utdanning-vurdering
  template:
    metadata:
      labels:
        io.kompose.service: fint-core-consumer-utdanning-vurdering
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "provider/actuator/prometheus"
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        - image: fintlabsacr.azurecr.io/fint-core-consumer-utdanning-vurdering:dummy
          name: fint-core-consumer-utdanning-vurdering
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
